added link to dutch translation

--- a/web/index.html
+++ b/web/index.html
@@ -51,6 +51,15 @@
     Please let me know of any additional platforms you managed to make
     Java-Readline work on.
 
+    <p>You can find a French translation of this page <a
+	href="http://www.piecesdiscount24.fr/edu/?p=1102">here</a>
+      (courtesy of Vicky Rotarova).</p>
+    <p>
+      You can find the Dutch translation of this page <a
+	href="http://java-readline.sourceforge.net/index-dutch.html">here</a> (courtesy 
+      of <a
+	href="https://allesineenpakketten.nl/">allesineenpakketten.nl</a>).
+    </p>
     <hr>
     <H2>Download</H2>
 
